Fix bug, prevent playback overlaping when play btn is clicked  more times

--- a/src/components/Drum.module.css
+++ b/src/components/Drum.module.css
@@ -43,7 +43,7 @@
   background-position: 100%;
   animation: anim-moving-glow 80s linear infinite;
 }
-@keyframes anim-moving-glow {
+/* @keyframes anim-moving-glow {
   0% {
     background-position: 0 0;
   }
@@ -53,7 +53,7 @@
   100% {
     background-position: 0 0;
   }
-}
+} */
 .moving-glow:after {
   filter: blur(30px);
 }
@@ -182,6 +182,8 @@ input:checked + .Slider:before {
     background: red;
 } */
 .RecPlayBtnWrapper {
+    position: absolute;
+    width: 300px;
     display: flex;
     justify-content: space-between;
 }
